; ModuleID = '/home/carl/AnghaBench/linux/net/rds/extr_ib_cm.c_ibdev_put_vector.c'
source_filename = "/home/carl/AnghaBench/linux/net/rds/extr_ib_cm.c_ibdev_put_vector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_ib_device = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rds_ib_device*, i32)* @ibdev_put_vector to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ibdev_put_vector(%struct.rds_ib_device* %0, i32 %1) #0 {
  %3 = alloca %struct.rds_ib_device*, align 8
  %4 = alloca i32, align 4
  store %struct.rds_ib_device* %0, %struct.rds_ib_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.rds_ib_device*, %struct.rds_ib_device** %3, align 8
  %6 = getelementptr inbounds %struct.rds_ib_device, %struct.rds_ib_device* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %7, i64 %9
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, -1
  store i32 %12, i32* %10, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
